--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theta Wallet</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card">
@@ -27,8 +28,7 @@
               autocomplete="off"
               cols="10"
               rows="5"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="field">
             <textarea
@@ -37,11 +37,10 @@
               placeholder="Transfer address"
               id="address"
               autocomplete="off"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <p class="space"></p>
-          <!--Loader-->
+          <!-- Loader -->
           <div id="center" class="center">
             <div class="loader">
               <div class="bar1"></div>
@@ -61,12 +60,9 @@
           <small>
             <a target="_blank" id="link" href=""> Check Your Transaction </a>
           </small>
-          <!--Loader-->
+          <!-- Loader -->
           <div class="btn">
-            <button id="form" class="button1">
-              &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;Transfer&nbsp; &nbsp;
-              &nbsp; &nbsp; &nbsp; &nbsp;
-            </button>
+            <button id="form" class="button1">Transfer</button>
           </div>
           <div class="btn">
             <button id="check_balance" class="button3">Check Balance</button>
@@ -74,10 +70,6 @@
         </div>
       </div>
     </div>
-    <!-- <h1>My Wallet</h1>
-    <div id="accountInfo"></div>
-    <button id="connectButton">Connect</button>
-    <button id="aiCalculateButton">AI Calculate</button> -->
     <script src="./ethers.js"></script>
     <script src="./popup.js"></script>
   </body>
