--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <div class="card">
       <div class="card2">
         <div class="form">
-          <p id="heading">@trialheading</p>
+          <p id="heading">Theta Hackathon</p>
           <div class="field">
             <input
               type="number"
